# omaha

./: .gitignore
doc/: CustomizingOmaha.md
omaha/: BUILD.gn
omaha/base/: BUILD.gn  app_util.cc  apply_tag.cc  build.scons  command_line_parser.cc  command_line_parser.h  command_line_parser_internal.h  command_line_parser_unittest.cc  command_line_validator.cc  const_addresses.h  constants.h  string.cc  string.h  string_unittest.cc  utils_unittest.cc  xml_utils.cc  xml_utils.h
omaha/client/: BUILD.gn  help_url_builder_test.cc  install.cc  install_self.cc
omaha/common/: BUILD.gn  app_registry_utils_unittest.cc  config_manager.cc  config_manager_unittest.cc  goopdate_command_line_validator.cc  goopdate_utils.cc  goopdate_utils.h  goopdate_utils_unittest.cc  omaha_customization_unittest.cc  ping.cc  ping_event_download_metrics_unittest.cc  ping_event_unittest.cc  ping_test.cc  url_utils_unittest.cc  webplugin_utils.h
omaha/core/: BUILD.gn  google_update_core_unittest.cc  system_monitor_unittest.cc
omaha/crashhandler/: BUILD.gn
omaha/google_update/: BUILD.gn  winmain.cc
omaha/goopdate/: BUILD.gn  app.cc  app_bundle_state_initialized.cc  app_manager.cc  app_manager_unittest.cc  app_state_checking_for_update.cc  app_state_init.cc  app_state_install_complete.cc  app_state_no_update.cc  app_state_waiting_to_check_for_update.cc  code_red_check.cc  com_register_shell.cc  crash_unittest.cc  dm_storage.cc  dm_storage_test_utils.cc  goopdate.cc  install_manager.cc  install_manager_unittest.cc  installer_wrapper.cc  installer_wrapper_unittest.cc  ping_event_cancel_test.cc  update_response_utils.cc  worker.cc
omaha/net/: BUILD.gn  detector.cc
omaha/plugins/update/: site_lock.cc  site_lock.h
omaha/plugins/update/activex/: oneclick_control.h  update3web_control.cc  update3web_control.h
omaha/recovery/: BUILD.gn
omaha/service/: BUILD.gn
omaha/setup/: BUILD.gn  setup.cc
omaha/statsreport/: BUILD.gn
omaha/test/: build.scons
omaha/testing/: build.scons
omaha/tools/: proxy_clsid_utils.py
omaha/tools/goopdump/: data_dumper_goopdate.cc  goopdump_cmd_line_parser.cc
omaha/ui/: BUILD.gn
