static_library("client_lib") {
  sources = [
    "bundle_creator.cc",
    "bundle_installer.cc",
    "client_metrics.cc",
    "client_utils.cc",
    "help_url_builder.cc",
    "install.cc",
    "install_apps.cc",
    "install_self.cc",
    "shutdown_events.cc",
    "ua.cc",
  ]
  deps = [
    "//goopdate:omaha3_idl",
  ]
}