static_library("goopdate_util_lib") {
  sources = [
    "app_registry_utils.cc",
    "command_line_builder.cc",
    "config_manager.cc",
    "command_line.cc",
    "crash_utils.cc",
    "exception_handler.cc",
    "experiment_labels.cc",
    "extra_args_parser.cc",
    "event_logger.cc",
    "google_signaturevalidator.cc",
    "goopdate_command_line_validator.cc",
    "goopdate_utils.cc",
    "lang.cc",
    "oem_install_utils.cc",
    "ping.cc",
    "ping_event.cc",
    "ping_event_download_metrics.cc",
    "scheduled_task_utils.cc",
    "stats_uploader.cc",
    "update3_utils.cc",
    "update_request.cc",
    "update_response.cc",
    "url_utils.cc",
    "web_services_client.cc",
    "webplugin_utils.cc",
    "xml_const.cc",
    "xml_parser.cc",
  ]
}
