static_library("core_lib") {
  sources = [
    "core.cc",
    "core_metrics.cc",
    "google_update_core.cc",
    "scheduler.cc",
    "system_monitor.cc",
  ]
}

executable("core") {
  sources = [
    "winmain.cc"
  ]
  deps = [
    ":core_lib",
    "//base:lib",
    "//base:logging",
    "//base:security",
    "//common:goopdate_util_lib",
    "//goopdate:goopdate_min",
    "//goopdate:omaha3_idl",
    "//net:net",
    "//statsreport:stats_reporter",
  ]
  libs = [
    "bits.lib",
    "comctl32.lib",
    "crypt32.lib",
    "iphlpapi.lib",
    "mstask.lib",
    "netapi32.lib",
    "oleaut32.lib",
    "psapi.lib",
    "rpcns4.lib",
    "rpcrt4.lib",
    "shlwapi.lib",
    "shell32.lib",
    "taskschd.lib",
    "userenv.lib",
    "uuid.lib",
  ]
}