static_library("crashhandler_lib") {
  sources = [
    "crash_analyzer.cc",
    "crash_analyzer_checks.cc",
    "crash_handler.cc",
    "crash_dump_util.cc",
    "crashhandler_metrics.cc",
    "crash_worker.cc"
  ]
  deps = [
    "//base:lib",
    "//base:logging",
    "//base:security",
    "//common:goopdate_util_lib",
    "//core:core_lib",
    "//client:client_lib",
    "//goopdate:goopdate_lib",
    "//goopdate:omaha3_idl",
    "//net:net",
    "//recovery:client",
    "//service:service_lib",
    "//setup:setup_lib",
    "//setup:metrics",
    "//statsreport:stats_reporter",
    "//third_party/breakpad:breakpad",
    "//ui:ui_lib",
  ]
}

executable("crashhandler_exe") {
  sources = [
    "winmain.cc",
  ]
  output_name = "GoogleUpdateCrashHandler"
  deps = [
    ":crashhandler_lib",
  ]
  libs = [
    "advapi32.lib",
    "crypt32.lib",
    "iphlpapi.lib",
    "kernel32.lib",
    "msi.lib",
    "netapi32.lib",
    "ole32.lib",
    "oleaut32.lib",
    "psapi.lib",
    "rpcrt4.lib",
    "shell32.lib",
    "shlwapi.lib",
    "user32.lib",
    "userenv.lib",
    "uuid.lib",
    "version.lib",
    "wintrust.lib",
    "wtsapi32.lib",
  ]
  libs += [
    "mstask.lib",
    "taskschd.lib",
  ]
  # UI deps
  libs += [
    "Comctl32.lib",
    "gdi32.lib",
    "msimg32.lib",
    "uxtheme.lib",
  ]
}